--- a/MauiAppEventos/Views/CadastroEventos.xaml
+++ b/MauiAppEventos/Views/CadastroEventos.xaml
@@ -4,8 +4,108 @@
              x:Class="MauiAppEventos.Views.NewPage1"
              Title="NewPage1"
              NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray300}">
-    <VerticalStackLayout>
+             BackgroundColor="{StaticResource Gray600}">
+    
+    <VerticalStackLayout VerticalOptions="Center"
+                         Padding="10"
+                         Spacing="8">
+        <Label 
+            Text="Cálculo Da Evento"
+            FontSize="50"
+            FontFamily="CaveatBold"
+            TextColor="black"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center"/>
 
+        <Frame Padding="10">
+            <VerticalStackLayout>
+
+                <Label Text="Nome do Evento:"
+                   FontFamily="CaveatSemiBold"
+                   FontSize="20"/>
+
+                <Entry x:Name="NomeE"
+                   Placeholder="Digite o nome do evento"
+                   FontFamily="CaveatBold"
+                   Margin="10"/>
+                <!--Nome do Evento-->
+                
+                <Label Text="Local do Evento:"
+                   FontFamily="CaveatSemiBold"
+                   FontSize="20"/>
+
+                <Entry x:Name="localE"
+                   Placeholder="Digite o local do evento"
+                   FontFamily="CaveatBold"
+                   Margin="10"/>
+                <!--Nome do Evento-->
+
+                <HorizontalStackLayout>
+                    <Grid RowDefinitions="Auto" ColumnDefinitions="*, Auto, Auto" ColumnSpacing="20">
+
+                        <Label Grid.Row="0" Grid.Column="0"
+                               Text="Número de Participantes:"
+                               FontFamily="CaveatSemiBold"
+                               FontSize="20"/>
+
+                        <Label Grid.Row="0" Grid.Column="1"
+                               TextColor="black"
+                               Text="{Binding Value, Source={x:Reference stp_pessoas}}"
+                               BindingContext="{x:Reference stp_pessoas}"
+                               VerticalOptions="Center"
+                               HorizontalOptions="Center"
+                               Margin="10"/>
+
+                        <Stepper Grid.Row="0" Grid.Column="2"
+                               x:Name="stp_pessoas"
+                               Minimum="10"
+                               Maximum="150"
+                               Increment="1"
+                               VerticalOptions="Center"
+                               HorizontalOptions="End"/>
+                    </Grid>
+                </HorizontalStackLayout>
+
+                <Grid ColumnDefinitions="*, *" RowDefinitions="*, *" RowSpacing="5">
+
+                    <Label Text="Data de Início:"
+                       FontFamily="CaveatSemiBold"
+                       FontSize="20"
+                       Grid.Row="0"/>
+
+                    <DatePicker x:Name="Dp_inicio"
+                            DateSelected="Dp_inicio_DateSelected"
+                            Format="dd/MM/yyyy"
+                            Grid.Column="1"
+                            Grid.Row="0"/>
+
+                    <Label Text="Data de Termino:"
+                       FontFamily="CaveatSemiBold"
+                       FontSize="20"
+                       Grid.Row="1"/>
+
+                    <DatePicker x:Name="Dp_termino"
+                            Format="dd/MM/yyyy"
+                            Grid.Column="1"
+                            Grid.Row="1"/>
+
+                </Grid>
+                
+            </VerticalStackLayout>
+        </Frame>
+
+        <Button Text="Calcular Custo" 
+                BackgroundColor="{StaticResource Gray900}"
+                TextColor="{StaticResource Gray100}"
+                Clicked="Button_ClickedCalcular"/>
+
+
+        <Button Text="Sobre Nós" 
+                BackgroundColor="gray"
+                TextColor="black"             
+                CornerRadius="20"
+                WidthRequest="100"
+                Clicked="Button_ClickedSobre"/>
+        
     </VerticalStackLayout>
 </ContentPage>
